--- a/BirdFarmShop/Pages/Login.cshtml
+++ b/BirdFarmShop/Pages/Login.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
 @model BirdFarmShop.Pages.LoginModel
-@using Microsoft.AspNetCore.Mvc.TagHelpers;
+@using Microsoft.AspNetCore.Http
 @{
     ViewData["Title"] = "Login";
 }
@@ -17,8 +17,6 @@
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
-
-
 <body>
     <div class="warapper">
 
@@ -26,13 +24,13 @@
             <h2>Login</h2>
             <form method="post">
                 <div class="input-box">
-                    <input asp-for="TblUser.UserName" class="form-control" />
-                    <span asp-validation-for="TblUser.UserName" class="text-danger"></span>
+                    <input asp-for="user.UserName" class="form-control" />
+                    <span asp-validation-for="user.UserName" class="text-danger"></span>
                     <label>User Name</label>
                 </div>
                 <div class="input-box">
-                    <input asp-for="TblUser.Pass" class="form-control" />
-                    <span asp-validation-for="TblUser.Pass" class="text-danger"></span>
+                    <input asp-for="user.Pass" class="form-control" />
+                    <span asp-validation-for="user.Pass" class="text-danger"></span>
                     <label>Password</label>
                 </div>
                 <div class="remeber-forgot">
@@ -45,7 +43,7 @@
             </form>
                 <div class="login-register">
                     <p>
-                        Don't have an account?<a class="register-link" href="#">
+                        Don't have an account?<a class="register-link" asp-page="Register">
                             Register
                         </a>
                     </p>
@@ -59,46 +57,7 @@
             
         </div>
 
-        <div class="form-box register">
-            <h2>Register</h2>
-            <form action="#">
-                <div class="input-box">
-                    <span class="icon"><ion-icon name="person-outline"></ion-icon></span>
-                    <input type="text">
-                    <label>User Name</label>
-                </div>
-                <div class="inforUser">
-                    <div class="fn input-box">
-                        <span class="icon"><ion-icon name="person-outline"></ion-icon></span>
-                        <input type="text">
-                        <label>First Name</label>
-                    </div>
-                    <div class="ln input-box">
-                        <span class="icon"><ion-icon name="person-outline"></ion-icon></span>
-                        <input type="text">
-                        <label>Last Name</label>
-                    </div>
-                </div>
-                <div class="input-box">
-                    <span class="icon"><ion-icon name="person-outline"></ion-icon></span>
-                    <input type="text">
-                    <label>Phone Number</label>
-                </div>
-                <div class="input-box">
-                    <span class="icon"><ion-icon name="person-outline"></ion-icon></span>
-                    <input type="password">
-                    <label>Password</label>
-                </div>
-                <button class="btn btn-success" type="submit">Register</button>
-                <div class="login-register">
-                    <p>
-                        Already have an account<a class="login-link" href="#">
-                            Login
-                        </a>
-                    </p>
-                </div>
-            </form>
-        </div>
+        
     </div>
     <!-- Optional JavaScript -->
     <script src="~/js/login.js"></script>
