--- a/BirdFarmShop/wwwroot/css/login.css
+++ b/BirdFarmShop/wwwroot/css/login.css
@@ -9,7 +9,7 @@ body {
     justify-content: start;
     align-items: center;
     min-height: 100vh;
-    background: url("~/img/background.jpg") no-repeat;
+    background: url('../img/background.png');
     background-size: cover;
     background-position: center;
 }
