--- a/BirdFarmShop/Pages/Login.cshtml
+++ b/BirdFarmShop/Pages/Login.cshtml
@@ -50,10 +50,14 @@
                 </div>
                 <hr>
                 <span class="or">Or</span>
-                <button class="signup-social">
+            <form method="p" action="/LoginGoogle">
+                <button class="signup-social" type="submit">
                     <img src="./img/7123025_logo_google_g_icon.png" alt="">
                     <span class="signup-text">Login With Google</span>
                 </button>
+            </form>
+
+
             
         </div>
 
