--- a/BirdFarmShop/Pages/Test/Details.cshtml
+++ b/BirdFarmShop/Pages/Test/Details.cshtml
@@ -1,16 +1,22 @@
 ﻿@page
-@model BirdFarmShop.Pages.User.ProfileModel
+@model BirdFarmShop.Pages.Test.DetailsModel
 
 @{
-    ViewData["Title"] = "Profile";
+    ViewData["Title"] = "Details";
 }
 
-<h1>Profile</h1>
+<h1>Details</h1>
 
 <div>
-    <h3>Welcome @Model.TblUser.FullName</h3>
+    <h4>TblUser</h4>
     <hr />
     <dl class="row">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.TblUser.image)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.TblUser.image)
+        </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.TblUser.UserName)
         </dt>
@@ -47,16 +53,33 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.TblUser.Email)
         </dd>
-
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.TblUser.image)
+            @Html.DisplayNameFor(model => model.TblUser.UserStatus)
         </dt>
         <dd class="col-sm-10">
-            <img src="@Model.TblUser.image" />
+            @Html.DisplayFor(model => model.TblUser.UserStatus)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.TblUser.District)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.TblUser.District.DistrictId)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.TblUser.Role)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.TblUser.Role.RoleId)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.TblUser.Ward)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.TblUser.Ward.WardId)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@HttpContext.Session.GetInt32("UserID")">Edit</a> |
+    <a asp-page="./Edit" asp-route-id="@Model.TblUser?.UserId">Edit</a> |
     <a asp-page="./Index">Back to List</a>
 </div>
