Done Login, Profile,Home Page

--- a/BirdFarmShop/Pages/Login.cshtml
+++ b/BirdFarmShop/Pages/Login.cshtml
@@ -50,14 +50,13 @@
                 </div>
                 <hr>
                 <span class="or">Or</span>
-            <form method="p" action="/LoginGoogle">
+            <form method="get" action="/LoginGoogle">
                 <button class="signup-social" type="submit">
                     <img src="./img/7123025_logo_google_g_icon.png" alt="">
                     <span class="signup-text">Login With Google</span>
                 </button>
             </form>
-
-
+             
             
         </div>
 
