--- a/BirdFarmShop/Pages/User/Profile.cshtml
+++ b/BirdFarmShop/Pages/User/Profile.cshtml
@@ -76,18 +76,17 @@
                             <div class="info">
                                 <h4>Email:</h4>
                                 <p>@Model.TblUser.Email</p>
-                            </div>
-                          
+                            </div>                         
                             <div class="info">
                                 <h4>Họ & Tên:</h4>
                                 <p>@Model.TblUser.FullName</p>
                             </div>
                             <div class="info">
-                                <h4>số điện thoại:</h4>
+                                <h4>Số điện thoại:</h4>
                                 <p>@Model.TblUser.Phone</p>
                             </div>
                             <div class="info">
-                                <h4>địa chỉ:</h4>
+                                <h4>Địa chỉ:</h4>
                                 <p>@Model.TblUser.UserAddress</p>
                             </div>
                         </div>
