--- a/BirdFarmShop/Pages/Admin/UserManagement/Delete.cshtml
+++ b/BirdFarmShop/Pages/Admin/UserManagement/Delete.cshtml
@@ -1,12 +1,13 @@
 ﻿@page
-@model BirdFarmShop.Pages.Test.DetailsModel
+@model BirdFarmShop.Pages.Admin.UserManagement.DeleteModel
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Delete";
 }
 
-<h1>Details</h1>
+<h1>Delete</h1>
 
+<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>TblUser</h4>
     <hr />
@@ -78,8 +79,10 @@
             @Html.DisplayFor(model => model.TblUser.Ward.WardId)
         </dd>
     </dl>
-</div>
-<div>
-    <a asp-page="./Edit" asp-route-id="@Model.TblUser?.UserId">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+    
+    <form method="post">
+        <input type="hidden" asp-for="TblUser.UserId" />
+        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <a asp-page="./Index">Back to List</a>
+    </form>
 </div>
