--- a/BirdFarmShop/wwwroot/css/register.css
+++ b/BirdFarmShop/wwwroot/css/register.css
@@ -9,50 +9,38 @@ body {
     justify-content: start;
     align-items: center;
     min-height: 100vh;
-    background: url('./img/background.jpg') no-repeat;
+    background: url('../img/chim6.png') no-repeat;
     background-size: cover;
     background-position: center;
 }
 
 .warapper {
     position: relative;
-    width: 450px;
-    max-height: 910px;
-    height: 500px;
+    width: 480px;
+    height: 910px;
     margin-left: 100px;
     background: transparent;
     border: 2px solid rgba(225, 225, 225, .5);
     border-radius: 20px;
     backdrop-filter: blur(20px);
     box-shadow: 0 0 30px rgba(0, 0, 0, .5);
-    display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
     transition: 2s height ease;
     overflow: hidden;
+    margin: 20px 100px;
 }
-
-    .warapper.active {
-        position: relative;
-        height: 910px;
-        width: 450px;
-        margin: 20px 100px;
-    }
 
     .warapper .form-box {
         width: 100%;
         padding: 40px;
     }
 
-        .warapper .form-box.login {
-            transition: transform .18s ease;
-            transform: translateX(0);
+        .warapper .form-box .register {
+            position: absolute;
+            transition: none;
+            transform: translateX(550px);
         }
-
-    .warapper.active .form-box.login {
-        transition: none;
-        transform: translateX(-450px);
-    }
 
 .form-box h2 {
     font-size: 2em;
@@ -100,6 +88,22 @@ body {
     }
 
     .input-box input {
+        width: 100%;
+        height: 100%;
+        background: transparent;
+        border: none;
+        outline: none;
+        font-size: 1em;
+        color: #000;
+        font-weight: 600;
+        padding-right: 25px;
+    }
+    .input-box select:focus ~ label,
+    .input-box select:valid ~ label {
+        top: -5px;
+    }
+
+    .input-box select {
         width: 100%;
         height: 100%;
         background: transparent;
