--- a/BirdFarmShop/Pages/Login.cshtml
+++ b/BirdFarmShop/Pages/Login.cshtml
@@ -29,7 +29,7 @@
                     <label>User Name</label>
                 </div>
                 <div class="input-box">
-                    <input asp-for="user.Pass"/>
+                    <input asp-for="user.Pass" type="password"/>
                     <span asp-validation-for="user.Pass" class="text-danger"></span>
                     <label>Password</label>
                 </div>
