--- a/BirdFarmShop/Pages/Manager/StaffManagement/Create.cshtml
+++ b/BirdFarmShop/Pages/Manager/StaffManagement/Create.cshtml
@@ -26,9 +26,9 @@
                 <select asp-for="TblUser.DistrictId" class ="form-control" asp-items="ViewBag.DistrictId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="TblUser.image" class="control-label"></label>
-                <input asp-for="TblUser.image" class="form-control" />
-                <span asp-validation-for="TblUser.image" class="text-danger"></span>
+                <label asp-for="TblUser.Image" class="control-label"></label>
+                <input asp-for="TblUser.Image" class="form-control" />
+                <span asp-validation-for="TblUser.Image" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="TblUser.UserName" class="control-label"></label>
