--- a/BirdFarmShop/Pages/Manager/StaffManagement/Details.cshtml
+++ b/BirdFarmShop/Pages/Manager/StaffManagement/Details.cshtml
@@ -12,10 +12,10 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.TblUser.image)
+            @Html.DisplayNameFor(model => model.TblUser.Image)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.TblUser.image)
+            @Html.DisplayFor(model => model.TblUser.Image)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.TblUser.UserName)
