--- a/BirdFarmShop/Pages/Manager/StaffManagement/Edit.cshtml
+++ b/BirdFarmShop/Pages/Manager/StaffManagement/Edit.cshtml
@@ -30,9 +30,9 @@
                 <span asp-validation-for="TblUser.DistrictId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="TblUser.image" class="control-label"></label>
-                <input asp-for="TblUser.image" class="form-control" />
-                <span asp-validation-for="TblUser.image" class="text-danger"></span>
+                <label asp-for="TblUser.Image" class="control-label"></label>
+                <input asp-for="TblUser.Image" class="form-control" />
+                <span asp-validation-for="TblUser.Image" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="TblUser.UserName" class="control-label"></label>
