Done Update Staff

--- a/BirdFarmShop/Pages/HomePage.cshtml
+++ b/BirdFarmShop/Pages/HomePage.cshtml
@@ -63,7 +63,7 @@
                     </li>
 
                     <li>
-                        <a href="#about" class="navbar-link" data-nav-link>
+                        <a asp-page="User/Profile" class="navbar-link" data-nav-link>
                             <span>Thông tin</span>
 
                             <ion-icon name="chevron-forward-outline" aria-hidden="true"></ion-icon>
