--- a/BirdFarmShop/Pages/User/Profile.cshtml
+++ b/BirdFarmShop/Pages/User/Profile.cshtml
@@ -41,8 +41,8 @@
         <header class="header">
             <h2 class="logo">Bird store</h2>
             <nav class="navigation">
-                <a href="#">Trang chủ</a>
-                <a href="#">Thông tin</a>
+                <a asp-page="HomePage">Trang chủ</a>
+                <a asp-page="User/Profile">Thông tin</a>
                 <a href="#">Dịch vụ</a>
                 <a href="#">Liên hệ</a>
             </nav>
