--- a/BirdFarmShop/Pages/Login.cshtml
+++ b/BirdFarmShop/Pages/Login.cshtml
@@ -24,7 +24,7 @@
             <h2>Login</h2>
             <form method="post">
                 <div class="input-box">
-                    <input asp-for="user.UserName"  />
+                    <input asp-for="user.UserName" type="text" />
                     <span asp-validation-for="user.UserName" class="text-danger"></span>
                     <label>User Name</label>
                 </div>
