--- a/BirdFarmShop/Pages/Manager/StaffManagement/Details.cshtml
+++ b/BirdFarmShop/Pages/Manager/StaffManagement/Details.cshtml
@@ -12,10 +12,10 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.TblUser.Image)
+            @Html.DisplayNameFor(model => model.TblUser.image)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.TblUser.Image)
+            @Html.DisplayFor(model => model.TblUser.image)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.TblUser.UserName)
@@ -59,24 +59,14 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.TblUser.UserStatus)
         </dd>
+        
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.TblUser.District)
+            @Html.DisplayNameFor(model => model.TblUser.RoleName)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.TblUser.District.DistrictId)
+            @Html.DisplayFor(model => model.TblUser.RoleName)
         </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.TblUser.Role)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.TblUser.Role.RoleId)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.TblUser.Ward)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.TblUser.Ward.WardId)
-        </dd>
+        
     </dl>
 </div>
 <div>
