--- a/BirdFarmShop/Pages/Manager/StaffManagement/Edit.cshtml
+++ b/BirdFarmShop/Pages/Manager/StaffManagement/Edit.cshtml
@@ -15,18 +15,13 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="TblUser.UserId" />
             <div class="form-group">
-                <label asp-for="TblUser.RoleId" class="control-label"></label>
-                <select asp-for="TblUser.RoleId" class="form-control" asp-items="ViewBag.RoleId"></select>
-                <span asp-validation-for="TblUser.RoleId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="TblUser.WardId" class="control-label"></label>
-                <select asp-for="TblUser.WardId" class="form-control" asp-items="ViewBag.WardId"></select>
+                <select asp-for="TblUser.WardId" class="form-control" asp-items="ViewBag.WardName"></select>
                 <span asp-validation-for="TblUser.WardId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="TblUser.DistrictId" class="control-label"></label>
-                <select asp-for="TblUser.DistrictId" class="form-control" asp-items="ViewBag.DistrictId"></select>
+                <select asp-for="TblUser.DistrictId" class="form-control" asp-items="ViewBag.DistrictName"></select>
                 <span asp-validation-for="TblUser.DistrictId" class="text-danger"></span>
             </div>
             <div class="form-group">
