--- a/BirdFarmShop/Pages/Admin/UserManagement/ShowUserList.cshtml
+++ b/BirdFarmShop/Pages/Admin/UserManagement/ShowUserList.cshtml
@@ -5,75 +5,201 @@
     ViewData["Title"] = "ShowUserList";
 }
 
-<h1>ShowUserList</h1>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
+    <title>Modern Admin Dashboard</title>
+    <link rel="stylesheet" href="~/css/admin.css">
+    <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+</head>
+<body>
+    <input type="checkbox" id="menu-toggle">
+    <div class="sidebar">
+        <div class="side-header">
+            <h3>B<span>ird</span></h3>
+        </div>
 
-<p>
-    <a asp-page="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.TblUser[0].UserName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TblUser[0].Pass)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TblUser[0].FullName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TblUser[0].Phone)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TblUser[0].UserAddress)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TblUser[0].Email)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TblUser[0].UserStatus)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TblUser[0].RoleName)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model.TblUser) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.UserName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Pass)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FullName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Phone)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UserAddress)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Email)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UserStatus)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.RoleName)
-            </td>
+        <div class="side-content">
+            =
+            <div class="profile">
+                <div class="profile-img bg-img" style="background-image:url(@Model.TblUserDTO.image)"> </div>
+                <h4></h4>
+                <small>@Model.TblUserDTO.FullName</small>
+            </div>
+            <div class="side-menu">
+                <ul>
+                    <li>
+                        <a href="" class="active">
+                            <span><i class="fa-solid fa-user-tie"></i></span>
+                            <small>User</small>
+                        </a>
+                    </li>
+                    <li>
+                        <a asp-page="./BirdManagement">
+                            <span><i class="fa-solid fa-kiwi-bird"></i></span>
+                            <small>Bird</small>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <span class="las la-envelope"></span>
+                            <small>Mailbox</small>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <span class="las la-clipboard-list"></span>
+                            <small>Projects</small>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <span class="las la-shopping-cart"></span>
+                            <small>Orders</small>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <span class="las la-tasks"></span>
+                            <small>Tasks</small>
+                        </a>
+                    </li>
 
-            <td>
-                <a asp-page="./Edit" asp-route-id="@item.UserId">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.UserId">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.UserId">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <div class="main-content">
+
+        <header>
+            <div class="header-content">
+                <label for="menu-toggle">
+                    <span class="las la-bars"></span>
+                </label>
+
+                <div class="header-menu">
+                    <label for="">
+                        <span class="las la-search"></span>
+                    </label>
+
+                    <div class="notify-icon">
+                        <span class="las la-envelope"></span>
+                        <span class="notify">4</span>
+                    </div>
+
+                    <div class="notify-icon">
+                        <span class="las la-bell"></span>
+                        <span class="notify">3</span>
+                    </div>
+
+                    <div class="user">
+                        <div class="bg-img" style="background-image: url(img/1.jpeg)"></div>
+
+                        <span class="las la-power-off"></span>
+                        <span>Logout</span>
+                    </div>
+                </div>
+            </div>
+        </header>
+
+
+        <main>
+
+            <div class="page-header">
+                <h1>Dashboard</h1>
+                <small>Home / Dashboard</small>
+            </div>
+
+            <div class="page-content">
+
+                <div class="records table-responsive">
+
+                    <div class="record-header">
+
+
+                        <div class="browse">
+                            <input type="search" placeholder="Search" class="record-search">
+
+                        </div>
+                    </div>
+
+                    <div>
+                        <table width="100%">
+                            <thead>
+                                <tr>
+                                    <th>#</th>
+                                    <th><span class="las la-sort"></span>@Html.DisplayNameFor(model => model.TblUser[0].UserName)</th>
+
+                                    <th><span class="las la-sort"></span>@Html.DisplayNameFor(model => model.TblUser[0].UserAddress)</th>
+                                    <th><span class="las la-sort"></span> @Html.DisplayNameFor(model => model.TblUser[0].Phone)</th>
+                                    <th><span class="las la-sort"></span> @Html.DisplayNameFor(model => model.TblUser[0].UserStatus)</th>
+                                    <th><span class="las la-sort"></span>@Html.DisplayNameFor(model => model.TblUser[0].RoleName)</th>
+                                    <th><span></span></th>
+                                </tr>
+                            </thead>
+                            @foreach (var item in Model.TblUser)
+                            {
+                                <tbody class="list">
+                                    <tr class="item">
+                                        <td>@Html.DisplayFor(modelItem => item.UserId)</td>
+                                        <td>
+                                            <div class="client">
+                                                <div class="client-img bg-img" style="background-image:url(@Html.DisplayFor(modelItem => item.image))"> </div>
+                                                <div class="client-info">
+                                                    <h4>@Html.DisplayFor(modelItem => item.FullName)</h4>
+                                                    <small>@Html.DisplayFor(modelItem => item.Email)</small>
+                                                </div>
+                                            </div>
+                                        </td>
+
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.UserAddress)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Phone)
+                                        </td>
+                                        <td>
+                                            <select class="form-select-sm" aria-label="Default select example">
+                                                <option selected>Choose</option>
+                                                @if (item.UserStatus == true)
+                                                {
+                                                    <option value="1">@Html.DisplayFor(modelItem => item.UserStatus)</option>
+                                                }
+                                                else
+                                                {
+                                                    <option value="2">@Html.DisplayFor(modelItem => item.UserStatus)</option>
+                                                }
+                                            </select>
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.RoleName)
+                                        </td>
+                                        <td>
+                                            <div class="actions">
+                                                <a asp-page="./Details" asp-route-id="@item.UserId"><span><i class="fa-solid fa-eye"></i></span></a>
+                                                <a asp-page="./Edit" asp-route-id="@item.UserId"><span><i class="fa-solid fa-pen"></i></span></a>
+                                                <a asp-page="./Delete" asp-route-id="@item.UserId"><span><i class="fa-solid fa-trash"></i></span></a>
+                                            </div>
+                                        </td>
+                                    </tr>
+
+
+                                </tbody>
+                            }
+                        </table>
+                    </div>
+                    <ul class="listPage">
+                    </ul>
+
+                </div>
+
+            </div>
+
+        </main>
+
+    </div>
+    <script src="~/js/admin.js"></script>
+    <script src="https://kit.fontawesome.com/aadd71a7c7.js" crossorigin="anonymous"></script>
+</body>
