--- a/BirdFarmShop/Pages/User/UpdateProfile.cshtml
+++ b/BirdFarmShop/Pages/User/UpdateProfile.cshtml
@@ -14,19 +14,15 @@
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="TblUser.UserId" />
-            <div class="form-group">
-                <label asp-for="TblUser.RoleId" class="control-label"></label>
-                <select asp-for="TblUser.RoleId" class="form-control" asp-items="ViewBag.RoleId"></select>
-                <span asp-validation-for="TblUser.RoleId" class="text-danger"></span>
-            </div>
+            
             <div class="form-group">
                 <label asp-for="TblUser.WardId" class="control-label"></label>
-                <select asp-for="TblUser.WardId" class="form-control" asp-items="ViewBag.WardId"></select>
+                <select asp-for="TblUser.WardId" class="form-control" asp-items="ViewBag.WardName"></select>
                 <span asp-validation-for="TblUser.WardId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="TblUser.DistrictId" class="control-label"></label>
-                <select asp-for="TblUser.DistrictId" class="form-control" asp-items="ViewBag.DistrictId"></select>
+                <select asp-for="TblUser.DistrictId" class="form-control" asp-items="ViewBag.DistrictName"></select>
                 <span asp-validation-for="TblUser.DistrictId" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -36,7 +32,8 @@
             </div>
             <div class="form-group">
                 <label asp-for="TblUser.UserName" class="control-label"></label>
-                <input asp-for="TblUser.UserName" class="form-control" />
+                <input asp-for="TblUser.UserName" class="form-control" type="hidden" />
+                TblUser.UserName
                 <span asp-validation-for="TblUser.UserName" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -64,11 +61,7 @@
                 <input asp-for="TblUser.Email" class="form-control" />
                 <span asp-validation-for="TblUser.Email" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="TblUser.UserStatus" class="control-label"></label>
-                <input asp-for="TblUser.UserStatus" class="form-control" />
-                <span asp-validation-for="TblUser.UserStatus" class="text-danger"></span>
-            </div>
+            
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
@@ -77,7 +70,7 @@
 </div>
 
 <div>
-    <a asp-page="./Index">Back to List</a>
+    <a asp-page="./Profile">Back</a>
 </div>
 
 @section Scripts {
