--- a/BirdFarmShop/Pages/Admin/UserManagement/ShowUserList.cshtml
+++ b/BirdFarmShop/Pages/Admin/UserManagement/ShowUserList.cshtml
@@ -98,7 +98,7 @@
                         <div class="bg-img" style="background-image: url(img/1.jpeg)"></div>
 
                         <span class="las la-power-off"></span>
-                        <span>Logout</span>
+                        <a class="actions" asp-page="./Logout">Logout</a>
                     </div>
                 </div>
             </div>
@@ -161,17 +161,7 @@
                                             @Html.DisplayFor(modelItem => item.Phone)
                                         </td>
                                         <td>
-                                            <select class="form-select-sm" aria-label="Default select example">
-                                                <option selected>Choose</option>
-                                                @if (item.UserStatus == true)
-                                                {
-                                                    <option value="1">@Html.DisplayFor(modelItem => item.UserStatus)</option>
-                                                }
-                                                else
-                                                {
-                                                    <option value="2">@Html.DisplayFor(modelItem => item.UserStatus)</option>
-                                                }
-                                            </select>
+                                            @Html.DisplayFor(modelItem => item.UserStatus)
                                         </td>
                                         <td>
                                             @Html.DisplayFor(modelItem => item.RoleName)
