--- a/BirdFarmShop/Pages/Register.cshtml
+++ b/BirdFarmShop/Pages/Register.cshtml
@@ -22,6 +22,7 @@
                     <span class="icon"><ion-icon name="person-outline"></ion-icon></span>
                     <input asp-for="TblUser.UserName">
                     <span asp-validation-for="TblUser.UserName" class="text-danger"></span>
+                    <span class="text-danger">@Model.ErrorMessage</span>
                     <label>User Name</label>
                 </div>
                 <div class="input-box">
