Done Order Management (Admin,Manager)

--- a/BirdFarmShop/Pages/Manager/OrderManagement/Index.cshtml
+++ b/BirdFarmShop/Pages/Manager/OrderManagement/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model BirdFarmShop.Pages.Admin.OrderManagement.IndexModel
+@model BirdFarmShop.Pages.Manager.OrderManagement.IndexModel
 
 @{
     ViewData["Title"] = "Index";
