--- a/BirdFarmShop/Pages/User/Profile.cshtml
+++ b/BirdFarmShop/Pages/User/Profile.cshtml
@@ -56,7 +56,7 @@
                 <div id="menu" class="bar__child">
                     <div class="child">
                         <ul>
-                            <li><i class="fa fa-sign-out-alt"></i><a href="#">Logout</a></li>
+                            <li><i class="fa fa-sign-out-alt"></i><a asp-page="Logout">Logout</a></li>
                         </ul>
                     </div>
                 </div>
