--- a/BirdFarmShop/Pages/HomePage.cshtml
+++ b/BirdFarmShop/Pages/HomePage.cshtml
@@ -97,6 +97,13 @@
                         </a>
                     </li>
 
+                    <li>
+                        <a asp-page="Cart" class="navbar-link" data-nav-link>
+                            <span>Cart</span>
+                            <ion-icon name="chevron-forward-outline" aria-hidden="true"></ion-icon>
+                        </a>
+                    </li>
+
                 </ul>
 
             </nav>
@@ -159,7 +166,7 @@
                         Hãy đên với cửa hàng của chúng tôi và lựa chọn cho mình những con chim đẹp nhất cho mình 🐦
                     </p>
 
-                    <button class="btn btn-primary">
+                    <button class="btn btn-primary" onclick="window.location.href='./ShowAllBirds'">
                         <span>Mua Ngay</span>
 
                         <ion-icon name="heart-outline" aria-hidden="true"></ion-icon>
