--- a/BirdFarmShop/Pages/Manager/StaffManagement/Delete.cshtml
+++ b/BirdFarmShop/Pages/Manager/StaffManagement/Delete.cshtml
@@ -155,8 +155,9 @@
                 <form method="post" class="d-flex mt-3">
                     <input type="hidden" asp-for="TblUser.UserId" />
                     <button type="submit" value="Delete" class="btn1 btn-danger mr-2">Delete</button></>
-                    <a asp-page="./Index"><button class="btn1 btn-primary">Back to list</button></a>
+                    
                 </form>
+                <a class="back" asp-page="./Index"><button class="btn1 btn-primary">Back to list</button></a>
             </div>
         </div>
     </div>
