--- a/BirdFarmShop/Pages/Admin/UserManagement/ShowUserList.cshtml
+++ b/BirdFarmShop/Pages/Admin/UserManagement/ShowUserList.cshtml
@@ -118,7 +118,7 @@
 
                     <div class="record-header">
 
-
+                        <a asp-page="Create"><button class="btn btn-primary">Create</button></a>
                         <div class="browse">
                             <input type="search" placeholder="Search" class="record-search">
 
