--- a/BirdFarmShop/Pages/CheckOut.cshtml
+++ b/BirdFarmShop/Pages/CheckOut.cshtml
@@ -9,6 +9,8 @@
 <div class="row">
     <div class="col-md-4">
         <form method="post">
+            @if (Model.Msg == null)
+            {
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             
             <div class="form-group">
@@ -26,10 +28,18 @@
                 <input asp-for="TblUser.UserAddress" class="form-control" />
                 <span asp-validation-for="TblUser.UserAddress" class="text-danger"></span>
             </div>
-            <button type="submit" formaction="CheckOut">Check Out</button>
+                <button type="submit" formaction="CheckOut">Check Out</button>
+                
+            }
+            else
+            {
+                <spana class="text-danger">@Model.Msg</spana>
+                <a asp-page="Login">Login Now</a>
+            }
         </form>
     </div>
 </div>
+
 
 <form method="post" asp-page="cart" asp-page-handler="update">
     <table border="1">
