--- a/BirdFarmShop/wwwroot/css/create.css
+++ b/BirdFarmShop/wwwroot/css/create.css
@@ -27,7 +27,6 @@
 body {
     min-height: 80vh;
     background-color: rgb(25 123 255 / 7%);
-    
 }
 
 section {
@@ -36,56 +35,16 @@ section {
 }
 
     section .profile {
-        top: 50%;
-        left: 50%;
-        transform: translate(1.6%, 30%);
-        width: 75rem;
+        align-items: center;
+        transform: translate(1.6%, 25%);
+        width: 95%;
         height: cover;
-        display: flex;
         box-shadow: 0 1px 20px 0 rgba(21, 27, 30, 0.8);
         border-radius: 10px;
-        background-color: #efefef;
-        
     }
-
-.profile .profile__left {
-    width: 25%;
-    text-align: center;
-    padding: 50px;
-}
-
-    .profile .profile__left image {
-        margin-bottom: 10px;
-    }
-
-.upload {
-    left: 10rem;
-}
-
-    .upload .btn-Warning {
-        position: relative;
-        padding: 5px 10px;
-        font-size: 10px;
-        line-height: 1.5;
-        border-radius: 3px;
-        color: #fff;
-        background-color: #56534f;
-        overflow: hidden;
-        left: 0;
-        top: 0.5rem;
-    }
-
-.profile__left .btn-Warning input[type="file"] {
-    cursor: pointer;
-    position: absolute;
-    left: 0;
-    right: 0;
-    transform: scale(3);
-    opacity: 0;
-}
 
 .profile .profile__right {
-    width: 65%;
+    /* width: 100%; */
     padding: 40px 40px;
 }
 
@@ -99,17 +58,18 @@ section {
 /* update */
 .profile__right .info_data {
     display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    width: 115%;
+    justify-content: space-around;
+    align-items: center;
 }
 
     .profile__right .info_data .info_data-left {
         margin-right: 20px;
+        width: 100%;
     }
 
     .profile__right .info_data .info_data-right {
         margin-right: 20px;
+        width: 100%;
     }
 
 .profile .profile__right .info {
@@ -125,22 +85,33 @@ section {
 
     .profile .profile__right .info input {
         width: 100%;
-        /* margin-right: 40px; */
         outline: none;
         border-radius: 5px;
         border: 1px solid #ccc;
-        /* padding-left:15px ; */
         font-size: 14px;
         transition: all 0.4s ease;
+        transform: translateX(-50%);
+    }
+
+    .profile .profile__right .info select {
+        width: 100%;
+        outline: none;
+        border-radius: 5px;
+        border: 1px solid #ccc;
+        font-size: 14px;
+        transition: all 0.4s ease;
+        transform: translateX(-50%);
+        margin-bottom: 18px;
     }
 
 .button {
-    
+    text-align: center;
     margin-top: 14px;
+
 }
 .back {
     position: relative;
-    top: 67px;
-    left: 64rem;
-    width: 115.46px;
+    top: 41px;
+    left: 43rem;
+    width: 99.46px;
 }
